@@ -53,6 +53,10 @@ xine-lib (1.1.90) (Unreleased)
   * Check for supported extensions before opening the plugin and remove
     redundant core from plugins.
 
+xine-lib (1.1.9.1) (unreleased)
+  * Fix a read-past-end bug in xine-lib's internal strtok_r replacement.
+    (Only affects systems without strtok_r.)
+
 xine-lib (1.1.9)
   * Fix dvd://.../title[.chapter] handling (somewhat broken in 1.1.8).
   * Fix switching DVB subtitles channels.
